# rtype_cpp

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  R-Pint.mpi  R-Type  README  README.md  cmake_install.cmake  install.sh
R-Type.dir/R-Type.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
client/: APanel.hh  Bind.cpp  IPanel.hh  LoadingPanel.hh  Makefile  PanelFactory.hh  PlayPanel.cpp  PlayPanel.hh  R-Type.vcxproj  R-Type.vcxproj.filters  Settings.cpp  Settings.hh  SettingsPanel.hh  StartPanel.cpp  StartPanel.hh  bind.cpp  bind.h  client  config.sh  iparser.cpp  iparser.h  main.cpp  settings.cpp  settings.h  settings.h.autosave  settingsloader.cpp  settingsloader.h
client/common/: .#AMenuElement.hh  AMenuElement.cpp  AMenuElement.hh  APanel.cpp  APanel.hh  AVideoMode.hh  Asteroid.cpp  Asteroid.hh  Bind.cpp  Bind.hh  Button.cpp  Button.hh  ButtonFactory.cpp  ButtonFactory.hh  Client.cpp  Client.hh  Color.cpp  Color.hh  DemoPanel.cpp  DemoPanel.hh  Event.cpp  Event.hh  Explosion.cpp  Explosion.hh  Font.cpp  Font.hh  GamePanel.cpp  GamePanel.hh  IColor.hh  IEvent.hh  IFont.hh  IInputManager.hh  IPanel.hh  IParser.hh  IRenderWindow.hh  ISprite.hh  IText.hh  ITexture.hh  IVector2.hh  IVideoMode.hh  (+70 more)
client/common/misc/: MicroDesignDefault.png.old
client/config/: DefaultConfig.ini  PersonalConfig.ini  PersonnalConfig.ini
common/: ANetwork.hpp  CRC.hpp  CreateRequest.hpp  E_Difficulty.hh  ISocket.hpp  Network.hpp  NetworkWin.hpp  ProtocoleEnum.hh  Random.hpp  Socket.hpp  SocketWin.hpp
common/Thread/: AMutex.hh  AThread.hpp  Mutex.hpp  ThreadFactory.cpp  ThreadFactory.hh  ThreadUnix.cpp  ThreadUnix.hh  ThreadUnix.hpp  ThreadWin.hh  ThreadWin.hpp  Threadstest.cpp  a.out
doc/: Documentation.aux  Documentation.tex  Documentation.toc
server/: .travis.yml  AComponent.hh  AComponent.hpp  AEntity.cpp  AEntity.hh  ANetwork.hh  ANetwork.hpp  ASystem.hh  ASystem.hpp  BonusIG.hpp  Bot.hpp  BotManager.hpp  CMakeLists.txt  Case.hh  Client.cpp  Client.hh  ClientManager.cpp  ClientManager.hh  CommandManager.cpp  CommandManager.hh  CommandManager.hpp  ComponentHealth.cpp  ComponentHealth.hh  ComponentHitbox.cpp  ComponentHitbox.hh  ComponentLaser.cpp  ComponentLaser.hh  ComponentMissile.cpp  ComponentMissile.hh  ComponentPosition.cpp  ComponentPosition.hh  ComponentRiffle.cpp  ComponentRiffle.hh  ComponentShield.cpp  ComponentShield.hh  CreateRequest.hpp  DLLoader.hpp  DynLibLoader.hpp  DynLibLoaderWin.hpp  E_Command.hh  (+65 more)
server/.cccc/: AEntity.html  AEntity.xml  Client.html  Client.xml  ClientManager.html  ClientManager.xml  CommandManager.html  CommandManager.xml  E_Component.html  E_Component.xml  E_Difficulty.html  E_Difficulty.xml  E_EntityType.html  E_EntityType.xml  EntityFactory.html  EntityFactory.xml  EntityManager.html  EntityManager.xml  Game.html  Game.xml  GameManager.html  GameManager.xml  Health.html  Health.xml  ISocket.html  ISocket.xml  Laser.html  Laser.xml  Missile.html  Missile.xml  Parameters.html  Parameters.xml  Player.html  Player.xml  PlayerFactory.html  PlayerFactory.xml  Position.html  Position.xml  Rifle.html  Rifle.xml  (+22 more)
server/Room/: Room.cpp  Room.hh  RoomManager.cpp  RoomManager.hh
server/Thread/: AThread.hpp  ThreadUnix.hh  ThreadWin.cpp  ThreadWin.hh  Threadstest.cpp
server/libs/: LittleMonster.cc  LittleMonster.cpp  LittleMonster.hh  allbuild.sh  boss_1.cpp  bot_1.cpp  bot_2.cpp  bot_3.cpp  bot_4.cpp  build.sh  buildWin.bat
unitTest/: CMakeLists.txt  Test.hpp  UnitTest.hpp  config.sh  main.cpp
